# getting-close-to-the-conceptual-metal

./: .ghci  .hlint.yaml  README.md  default.nix  getting-close-to-the-conceptual-metal.cabal  hot-air.cabal
exe/: Main.hs
lib/HotAir/: Bit.hs  Bool.hs  Byte.hs  ByteString.hs  Char.hs  Either.hs  Eq.hs  Function.hs  IO.hs  Identity.hs  List.hs  Maybe.hs  Nat.hs  Ord.hs  Pair.hs  Parser.hs  Show.hs  State.hs  String.hs  Unit.hs  Vector.hs
lib/HotAir/Nat/: Read.hs
src/: Main.hs
src/HotAir/: Char.hs  Eq.hs  IO.hs  List.hs  Semigroup.hs
