cabal-version:       2.2
name:                getting-close-to-the-conceptual-metal
version:             0.1.0.0
license:             BSD-3-Clause
author:              Brad Parker
maintainer:          hi@bradparker.com

library
  build-depends:       base ^>=4.12.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010

executable getting-close-to-the-conceptual-metal
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010
