cabal-version: 2.2
name: hot-air
version: 0.1.0.0
license: BSD-3-Clause
author: Brad Parker
maintainer: hi@bradparker.com

library
  build-depends:
      base ^>=4.12.0.0,
      integer-gmp,
      overloaded
  hs-source-dirs:
      lib
  exposed-modules:
      HotAir.Bool
      HotAir.Char
      HotAir.Eq
      HotAir.IO
      HotAir.List
      HotAir.Maybe
      HotAir.Nat
      HotAir.Ord
      HotAir.Pair
      HotAir.Show
      HotAir.String
  default-language:
      Haskell2010

executable hot-air
  main-is:
      Main.hs
  build-depends:
      base ^>=4.12.0.0,
      hot-air
  hs-source-dirs:
      exe
  default-language:
      Haskell2010
